--- a/deploy/beacon.yml
+++ b/deploy/beacon.yml
@@ -40,11 +40,11 @@ services:
       - ./beacon/beacon.conf:/beacon/beacon_api/conf/config.ini
       - ./beacon/access_levels.yml:/beacon/beacon_api/utils/access_levels.yml
     ports:
-      - "5050:5050"
+      - "5057:5050"
     networks:
       - priv
       - pub
-    entrypoint: ['/bin/sleep','100000000']  # we don't run the beacon just after starting, we'll do it manually 
+    # entrypoint: ['/bin/sleep','100000000']  # we don't run the beacon just after starting, we'll do it manually 
 
   ui:
     build: ../ui
