--- a/deploy/beacon.yml
+++ b/deploy/beacon.yml
@@ -28,23 +28,16 @@ services:
     image: egarchive/beacon-api:2.0
     hostname: beacon
     container_name: beacon
-    environment:
-      - DATABASE_URL=beacon-db
-      - DATABASE_PORT=5432
-      - DATABASE_USER=beacon
-      - DATABASE_PASSWORD=secretpassword
-      - DATABASE_NAME=beacon
-      - DATABASE_SCHEMA=public
     volumes:
       - ../src/beacon_api:/beacon/beacon_api  # we do that to be able to modify the code and update the container "live"
-      - ./beacon/beacon.conf:/beacon/beacon_api/conf/config.ini
-      - ./beacon/access_levels.yml:/beacon/beacon_api/utils/access_levels.yml
+      - ./beacon/conf.py:/beacon/beacon_api/conf.py
+      - ./beacon/access_levels.yml:/beacon/beacon_api/api/access_levels.yml
     ports:
       - "5057:5050"
     networks:
       - priv
       - pub
-    # entrypoint: ['/bin/sleep','100000000']  # we don't run the beacon just after starting, we'll do it manually 
+    entrypoint: ['/bin/sleep','100000000']  # we don't run the beacon just after starting, we'll do it manually 
 
   ui:
     build: ../ui
