--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -24,13 +24,13 @@ services:
   # training-ui
   ###########################################
 
-  training-ui:
-    image: beacon2ri/training_ui:v0.1
-    hostname: beacon_training_ui    
-    ports:
-      - 9000:8080
-    networks:
-      - beacon-priv
+  #training-ui:
+    #image: beacon2ri/training_ui:v0.1
+    #hostname: beacon_training_ui    
+    #ports:
+    #  - 9000:8080
+    #networks:
+    #  - beacon-priv
 
   ###########################################
   # MongoDB Database
@@ -169,24 +169,11 @@ services:
   frontend:
     build:
       context: ../frontend
-    #command: ["yarn", "node", "/opt/yarn-v1.22.19/bin/yarn.js", "start" ]
+    #command: ["yarn"]
     command: ["node", "/opt/yarn-v1.22.19/bin/yarn.js", "start" ]
     container_name: react
     ports:
       - 3000:3000
     volumes:
       - ../frontend:/usr/src/app
-
-  frontend2:
-    build:
-      context: ../frontend2
-    command: ["node", "/opt/yarn-v1.22.19/bin/yarn.js", "start"]
-    container_name: react2
-    depends_on:
-      - beacon
-    ports:
-      - 3001:3001
-    volumes:
-      - ../frontend2:/usr/src/app
-
 
