--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "bootswatch": "5.2.2",
     "devextreme": "^22.2.4",
     "devextreme-react": "^22.2.4",
+    "dotenv": "^16.3.1",
     "flatted": "^3.2.7",
     "formik": "2.2.9",
     "jquery": "^3.6.4",
+    "oidc-client": "^1.11.5",
     "oidc-react": "^3.2.2",
     "prettyjson": "^1.2.5",
     "react": "^18.2.0",
