--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,7 +1,7 @@
 {
 
-    "API_URL": "localhost:5050/api",
+    "API_URL": "http://localhost:5050/api",
     "REDIRECT_URL": "please insert here your redirect URL",
-    "KEYCLOAK_URL": "https://beacon-network-demo2.ega-archive.org"
+    "KEYCLOAK_URL": "http://localhost:8080"
 
   }
