fixed add user in registered

--- a/permissions/registered_datasets.yml
+++ b/permissions/registered_datasets.yml
@@ -2,6 +2,8 @@ app-user3:
 - CINECA_synthetic_cohort_EUROPE_UK1
 gemma_test:
 - CINECA_synthetic_cohort_EUROPE_UK1
+hola:
+- CINECA_synthetic_cohort_EUROPE_UK1
 jane:
 - CINECA_synthetic_cohort_EUROPE_UK1
 jofrdo:
@@ -11,7 +13,4 @@ john:
 new_user:
 - CINECA_synthetic_cohort_EUROPE_UK1
 usuari_creat:
-- CINECA_synthetic_cohort_EUROPE_UK1
-null: []
-None:
 - CINECA_synthetic_cohort_EUROPE_UK1
