backend for admin page finished

--- a/permissions/registered_datasets.yml
+++ b/permissions/registered_datasets.yml
@@ -1,4 +1,7 @@
 app-user3:
 - CINECA_synthetic_cohort_EUROPE_UK1
+gemma:
+- CINECA_synthetic_cohort_EUROPE_UK1
+- AV_Dataset
 hola:
 - CINECA_synthetic_cohort_EUROPE_UK1
