--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -38,9 +38,10 @@ services:
 
   db:
     image: mongo:5
+    command: mongod --port 27018
     hostname: mongo
     ports:
-      - 27017:27017
+      - 27018:27018
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
