--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -6,7 +6,7 @@ on:
     tags:
       - 'v*.*.*'
   pull_request:
-    branches: ['elixir-bsc', 'main']
+    branches: ['develop', 'master']
     tags:
       - 'v*.*.*'
 env:
