--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -2,9 +2,11 @@ name: Create and publish a Docker image
 
 on:
   push:
+    branches: ['develop', 'master']
     tags:
       - 'v*.*.*'
   pull_request:
+    branches: ['develop', 'master']
     tags:
       - 'v*.*.*'
 env:
