fixing tags github action

--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -2,16 +2,11 @@ name: Create and publish a Docker image
 
 on:
   push:
-    branches: ['develop', 'master']
-    tags: |
-      # set latest tag for default branch
-      type=raw,value=latest,enable={{is_default_branch}}
-  pull_request:
-    branches: ['develop', 'master']
     tags:
-    tags: |
-      # set latest tag for default branch
-      type=raw,value=latest,enable={{is_default_branch}}
+    - 'v*.*.*'
+  pull_request:
+    tags:
+    - 'v*.*.*'
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
