--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -2,11 +2,15 @@ name: Create and publish a Docker image
 
 on:
   push:
-    tags:
-    - 'v*.*.*'
+    branches: ['develop', 'master']
+    tags: |
+      # set latest tag for default branch
+      type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
   pull_request:
-    tags:
-    - 'v*.*.*'
+    branches: ['develop', 'master']
+    tags: |
+      # set latest tag for default branch
+      type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -26,6 +30,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Log in to the Container registry
         uses: docker/login-action@v3
+        if: github.ref_type == 'tag'
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -33,6 +38,7 @@ jobs:
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
+        if: github.ref_type == 'tag'
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Set up Docker Buildx
