--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -3,14 +3,12 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['develop', 'master']
-    tags: |
-      # set latest tag for default branch
-      type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
+    tags:
+      - 'v*.*.*'
   pull_request:
     branches: ['develop', 'master']
-    tags: |
-      # set latest tag for default branch
-      type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
+    tags:
+      - 'v*.*.*'
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -30,7 +28,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Log in to the Container registry
         uses: docker/login-action@v3
-        if: github.ref_type == 'tag'
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -38,7 +35,6 @@ jobs:
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
-        if: github.ref_type == 'tag'
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Set up Docker Buildx
