--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/react-outside-click-handler": "^1.3.3",
     "apexcharts": "^3.39.0",
     "axios": "1.1.3",
     "bootstrap": "5.2.2",
     "bootswatch": "5.2.2",
     "devextreme": "^22.2.4",
     "devextreme-react": "^22.2.4",
-    "dotenv": "^16.3.1",
     "flatted": "^3.2.7",
     "formik": "2.2.9",
     "jquery": "^3.6.4",
-    "oidc-client": "^1.11.5",
     "oidc-react": "^3.2.2",
     "prettyjson": "^1.2.5",
     "react": "^18.2.0",
@@ -33,6 +32,7 @@
     "react-modal": "^3.16.1",
     "react-modal-hover": "^1.1.13",
     "react-multi-switch-toggle": "^1.0.12",
+    "react-outside-click-handler": "^1.3.0",
     "react-router-bootstrap": "0.26.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
