--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,7 +1,5 @@
 {
-
-    "API_URL": "http://localhost:5050/api",
-    "REDIRECT_URL": "please insert here your redirect URL",
-    "KEYCLOAK_URL": "http://localhost:8080"
-
+    "API_URL": "https://beacon-apis-test.ega-archive.org/api",
+    "REDIRECT_URL": "http://localhost:3000/",
+    "KEYCLOAK_URL": "https://beacon-network-demo2.ega-archive.org"
   }
