--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,6 @@ tqdm~=4.62.3
 pydantic~=1.9.0
 pyhumps
 progressbar~=2.5
-fastobo~=0.11.1
-pronto~=2.4.4
 #requests
 requests==2.25.1
 pandas==1.5.3
@@ -37,4 +35,7 @@ Django==4.1.3
 django-crispy-forms==1.14.0
 django-environ==0.8.1
 mozilla-django-oidc==3.0.0
+pytest==7.4.4
+pytest-aiohttp==1.0.5
+pytest-asyncio==0.23.4
 
