--- a/beacon/request/cohorts.yml
+++ b/beacon/request/cohorts.yml
@@ -1,3 +1,4 @@
+rd_connect_synthetic_cohort: ['Case1F', 'Case1C', 'Case1M', 'Case2F', 'Case2C', 'Case2M', 'Case3F', 'Case3C', 'Case3M', 'Case4F', 'Case4C', 'Case4M', 'Case5F', 'Case5C', 'Case5M', 'Case6F', 'Case6C', 'Case6M']
 AV_Dataset: ["AV0101", "AV0102"]
 CINECA_synthetic_cohort_UK1: [
 "HG00096",
