--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,5 +1,5 @@
 {
-    "API_URL": "https://beacon-apis-test.ega-archive.org/api",
-    "REDIRECT_URL": "http://localhost:3000/",
-    "KEYCLOAK_URL": "https://beacon-network-demo2.ega-archive.org"
-  }
+  "API_URL": "http://beaker:5050/api",
+  "REDIRECT_URL": "http://beaker:3000/",
+  "KEYCLOAK_URL": "https://beaker:9991"
+}
