--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -126,24 +126,22 @@ services:
     container_name: idp
     entrypoint: /opt/keycloak/bin/keycloak-entrypoint.sh
     environment:
-      # - KEYCLOAK_FRONTEND_URL=http://idp:8080/auth
-      # - KEYCLOAK_LOGLEVEL=DEBUG
-      # - ROOT_LOGLEVEL=DEBUG
-      - KEYCLOAK_USER=admin
-      - KEYCLOAK_PASSWORD=secret
-      - DB_USER=admin
-      - DB_PASSWORD=secret
-      - DB_VENDOR=postgres
-      - DB_ADDR=idp-db
-      - DB_PORT=5432
-      - DB_DATABASE=keycloak
-      #- DB_SCHEMA=public
-      - KEYCLOAK_IMPORT=/tmp/beacon-realm.json -Dkeycloak.profile.feature.upload_scripts=enabled -Dkeycloak.profile.feature.token_exchange=enabled -Dkeycloak.profile.feature.admin_fine_grained_authz=enabled
-      - KEYCLOAK_HOSTNAME=localhost
-      #- KC_HOSTNAME_URL=https://beacon-network-test2.ega-archive.org
-      #- KC_HOSTNAME_ADMIN_URL=https://beacon-network-test2.ega-archive.org
-      #- KEYCLOAK_FRONTEND_URL=https://beacon-network-test2.ega-archive.org/auth/
-      #- PROXY_ADDRESS_FORWARDING=true
+      - KC_HOSTNAME_STRICT_BACKCHANNEL=true
+      - KC_HOSTNAME_URL=https://beaker:9991
+      - KC_ADMIN=admin
+      - KC_ADMIN_PASSWORD=secret
+      - KC_USER=admin
+      - KC_PASSWORD=secret
+      - KC_DB_USERNAME=admin
+      - KC_DB_PASSWORD=secret
+      - KC_DB_URL_HOST=idp-db
+      - KC_DB_URL_PORT=5432
+      - KC_DB=postgres # vendor
+      - KC_DB_URL_DATABASE=keycloak
+      - KC_DB_SCHEMA=public
+      - KC_FILE=/tmp/beacon-realm.json
+      - KC_HTTPS_CERTIFICATE_FILE=/opt/keycloak/conf/certs/server-cert.pem
+      - KC_HTTPS_CERTIFICATE_KEY_FILE=/opt/keycloak/conf/certs/server-key.pem 
     volumes:
       - ./beacon-realm.json:/tmp/beacon-realm.json
       - ./keycloak-entrypoint.sh:/opt/keycloak/bin/keycloak-entrypoint.sh
