--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -128,8 +128,8 @@ services:
     environment:
       - KC_HOSTNAME_STRICT_BACKCHANNEL=true
       - KC_HOSTNAME_URL=https://beaker:9991
-      - KC_ADMIN=admin
-      - KC_ADMIN_PASSWORD=secret
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=secret
       - KC_USER=admin
       - KC_PASSWORD=secret
       - KC_DB_USERNAME=admin
