point at local keycloak instance + update beacon realm config

--- a/deploy/keycloak/keycloak.conf
+++ b/deploy/keycloak/keycloak.conf
@@ -11,6 +11,6 @@ db-url-port=${KC_DB_URL_PORT:5432}
 db=${KC_DB:postgres}
 db-url-database=${KC_DB_URL_DATABASE:keycloak}
 db-schema=${KC_DB_SCHEMA:public}
-file=${KC_FILE:/tmp/beacon-realm.json}
+#file=${KC_FILE:/tmp/beacon-realm.json}
 https-certificate-file=${KC_HTTPS_CERTIFICATE_FILE:/opt/keycloak/conf/certs/server-cert.pem}
 https-certificate-key-file=${KC_HTTPS_CERTIFICATE_KEY_FILE:/opt/keycloak/conf/certs/server-key.pem }
