genereate certs on keycloak image build as seperate stage
maintains reduced attack vector on keycloak image by installing software
outside of said image.

--- a/deploy/keycloak/Dockerfile
+++ b/deploy/keycloak/Dockerfile
@@ -1,13 +1,21 @@
+FROM alpine:latest AS alpine-gencerts
+
+RUN apk add bash openssl
+COPY certs/ /var/tmp/certs/
+WORKDIR /var/tmp/certs
+RUN ./gencerts.sh self_cert.conf rsa
+
 FROM ${B2RI_IDP_IMAGE:-keycloak/keycloak:24.0.1-0}
 
 RUN mkdir -p /opt/keycloak/conf/certs 
 RUN mkdir -p /opt/keycloak/data/import
 
 USER root
-COPY --chown=keycloak keycloak/beacon-realm.json      /opt/keycloak/data/import/
-COPY --chown=keycloak keycloak/keycloak-entrypoint.sh /opt/keycloak/bin/
-COPY --chown=keycloak keycloak/keycloak.conf          /opt/keycloak/conf/
-COPY --chown=keycloak certs                           /opt/keycloak/conf/certs/
+COPY --chown=keycloak keycloak/beacon-realm.json       /opt/keycloak/data/import/
+COPY --chown=keycloak keycloak/keycloak-entrypoint.sh  /opt/keycloak/bin/
+COPY --chown=keycloak keycloak/keycloak.conf           /opt/keycloak/conf/
+
+COPY --from=alpine-gencerts --chown=keycloak /var/tmp/certs /opt/keycloak/conf/certs/
 
 USER keycloak
 RUN /opt/keycloak/bin/kc.sh build
