--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLIENT_ID='9db950db-31d8-4966-9f35-e8222d2fdcf6'
-REACT_APP_CLIENT_SECRET='a385b9af-bc1f-4d23-bc10-a03e9b75ef54c85ebbb1-f15c-49ed-9728-894e56894b1b'
+REACT_APP_CLIENT_SECRET='3fcedd8c-06cf-48a6-812e-d7c63154ec729c4f1734-4a67-4d17-a9a9-b3a7694f9063'
+REACT_APP_KEYCLOAK_CLIENT_SECRET='WGahOcaJcbQ2srhBsNH56NhhDxH5M51f'
