--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/react-outside-click-handler": "^1.3.3",
     "apexcharts": "^3.39.0",
     "axios": "1.1.3",
     "bootstrap": "5.2.2",
@@ -20,6 +19,7 @@
     "devextreme-react": "^22.2.4",
     "flatted": "^3.2.7",
     "formik": "2.2.9",
+    "html-react-parser": "^5.1.1",
     "jquery": "^3.6.4",
     "oidc-react": "^3.2.2",
     "prettyjson": "^1.2.5",
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-fusioncharts": "^4.0.0",
     "react-google-charts": "^4.0.0",
+    "react-html-parser": "^2.0.2",
     "react-json-pretty": "^2.2.0",
     "react-modal": "^3.16.1",
     "react-modal-hover": "^1.1.13",
@@ -35,13 +36,16 @@
     "react-outside-click-handler": "^1.3.0",
     "react-router-bootstrap": "0.26.2",
     "react-router-dom": "^6.4.3",
+    "react-router-scroll-top": "^0.3.1",
     "react-scripts": "^5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-select": "^5.7.2",
     "react-svg-worldmap": "^2.0.0-alpha.16",
     "react-tag-box": "^1.6.0",
     "reaselct": "^2.1.0",
     "rsuite": "^5.33.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "with-router": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -71,6 +75,7 @@
     "@types/jquery": "^3.5.16",
     "devextreme-themebuilder": "^22.2.4",
     "node-sass": "^8.0.0",
+    "react-app-rewired": "^2.2.1",
     "sass-loader": "^13.2.2"
   }
 }
