--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 REACT_APP_CLIENT_ID='9db950db-31d8-4966-9f35-e8222d2fdcf6'
 REACT_APP_CLIENT_SECRET='3fcedd8c-06cf-48a6-812e-d7c63154ec729c4f1734-4a67-4d17-a9a9-b3a7694f9063'
 REACT_APP_KEYCLOAK_CLIENT_SECRET='WGahOcaJcbQ2srhBsNH56NhhDxH5M51f'
+REACT_APP_KEYCLOAK_CLIENT_ID=''
