--- a/.github/workflows/update_api_version.yml
+++ b/.github/workflows/update_api_version.yml
@@ -4,8 +4,8 @@
 name: update api version
 
 on:
-  pull_request:
-    branches: ['master']
+  push:
+    branches: ['develop']
 
 jobs:
   updateapiversion:
@@ -27,4 +27,4 @@ jobs:
           git config --global user.name "API version update"
           git add .
           git commit -m "api version automatically generated"
-          git push origin develop
+          git push
