--- a/frontend/src/config-examples.json
+++ b/frontend/src/config-examples.json
@@ -36,7 +36,7 @@
             "value": "Weight",
             "ontology": "",
             "type": "alphanumeric",
-            "schemaField": "diseases.ageOfOnset.iso8601duration"
+            "schemaField": "measures.assayCode"
           }
         ],
         [
@@ -45,7 +45,7 @@
             "value": "Height",
             "ontology": "",
             "type": "alphanumeric",
-            "schemaField": "diseases.ageOfOnset.iso8601duration"
+            "schemaField": "measures.assayCode"
           }
         ]
       ]
