--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,5 +1,5 @@
 {
   "API_URL": "https://beacon-ri-demo.ega-archive.org/api",
-  "REDIRECT_URL": "https://cancer-beacon-demo.ega-archive.org/",
+  "REDIRECT_URL": "http://localhost:3000/",
   "KEYCLOAK_URL": "https://beacon-network-demo2.ega-archive.org"
 }
