--- a/permissions/controlled_datasets.yml
+++ b/permissions/controlled_datasets.yml
@@ -1,10 +1,20 @@
-app-user3:
-- CINECA_synthetic_cohort_EUROPE_UK1
-- AV_Dataset
-costero-e: []
-dummy_user:
-- AV_Dataset
-hola: []
-new_user: []
-test_user:
-- CINECA_synthetic_cohort_EUROPE_UK1
+costero-e:
+- HGI_BelCovid_2
+- HGI_BRACOVID
+- HGI_GEN-COVID
+- HGI_Hostage_1
+- HGI_Hostage_2
+- HGI_Hostage_3
+- HGI_Hostage_4
+- HGI_INMUNGEN_CoV2
+- HGI_SPGRX
+gmilla92:
+- HGI_BelCovid_2
+- HGI_BRACOVID
+- HGI_GEN-COVID
+- HGI_Hostage_1
+- HGI_Hostage_2
+- HGI_Hostage_3
+- HGI_Hostage_4
+- HGI_INMUNGEN_CoV2
+- HGI_SPGRX
