--- a/deploy/Makefile
+++ b/deploy/Makefile
@@ -1,2 +1,6 @@
 build:
-	docker-compose up -d --build beaconspanish
+	docker stop beaconspanish
+	docker stop beacon-permissionspanish
+	docker rm beaconspanish
+	docker rm beacon-permissionspanish
+	docker-compose up -d --build beaconspanish permissionspanish
