editing docker compose

--- a/deploy/Makefile
+++ b/deploy/Makefile
@@ -2,5 +2,5 @@ build:
 	docker stop beaconega
 	docker stop beacon-permissions-ega
 	docker rm beaconega
-	docker rm beacon-permissionsega
+	docker rm beacon-permissions-ega
 	docker-compose up -d --build beaconega permissionsega
