--- a/frontend/src/config-examples-cancer.json
+++ b/frontend/src/config-examples-cancer.json
@@ -9,7 +9,7 @@
               "value": "Colon adenocarcinoma",
               "ontology": "NCIT:C4349",
               "type": "ontology",
-              "schemaField": "diseases"
+              "schemaField": "diseases.diseaseCode"
             }
           ],
           [
@@ -18,7 +18,7 @@
               "value": "Mucinous Adenocarcinoma of the Colon and Rectum",
               "ontology": "NCIT:C7966",
               "type": "ontology",
-              "schemaField": "diseases"
+              "schemaField": "diseases.diseaseCode"
             }
           ],
           [
@@ -27,7 +27,7 @@
               "value": "Rectal Adenocarcinoma",
               "ontology": "NCIT:C9383",
               "type": "ontology",
-              "schemaField": "diseases"
+              "schemaField": "diseases.diseaseCode"
             }
           ]
         ]
@@ -237,13 +237,13 @@
               "subTitle2": "gene:",
               "label": "KRAS",
               "value": "molecularAttributes.geneIds=KRAS",
-              "schemaField": "molecularAttributes.geneIds"
+              "schemaField": "geneId"
             },
             {
               "subTitle2": "aminoacid:",
               "label": "p.Gly12Cys",
               "value": "molecularAttributes.aminoacidChanges=p.Gly12Cys",
-              "schemaField": "molecularAttributes.aminoacidChanges"
+              "schemaField": "aminoacidChange"
             }
           ],
           [
@@ -256,20 +256,20 @@
             },
             {
               "subTitle2": "referenceBases:",
-              "label": "C",
-              "value": "C",
+              "label": "G",
+              "value": "G",
               "schemaField": "referenceBases"
             },
             {
               "subTitle2": "start:",
-              "label": "110173330",
-              "value": "110173330",
+              "label": "25356892",
+              "value": "25356892",
               "schemaField": "start"
             },
             {
               "subTitle2": "end:",
-              "label": "110173331",
-              "value": "110173331",
+              "label": "25356893",
+              "value": "25356893",
               "schemaField": "end"
             },
             {
@@ -277,40 +277,14 @@
               "label": "SNP",
               "value": "SNP",
               "schemaField": "variantType"
+            },
+            {
+              "subTitle2": "assemblyId:",
+              "label": "GRCh38",
+              "value": "GRCh38",
+              "schemaField": "assemblyId"
             }
-          ],
-          [
-            {
-              "subTitle": "Mutations in:",
-              "subTitle2": "alternateBases:",
-              "label": "A",
-              "value": "A",
-              "schemaField": "alternateBases"
-            },
-            {
-              "subTitle2": "referenceBases:",
-              "label": "T",
-              "value": "T",
-              "schemaField": "referenceBases"
-            },
-            {
-              "subTitle2": "start:",
-              "label": "1334544",
-              "value": "1334544",
-              "schemaField": "start"
-            },
-            {
-              "subTitle2": "end:",
-              "label": "1334545",
-              "value": "1334545",
-              "schemaField": "end"
-            },
-            {
-              "subTitle2": "type:",
-              "label": "SNP",
-              "value": "SNP",
-              "schemaField": "variantType"
-            }
+
           ],
           [
             {
@@ -318,7 +292,7 @@
               "subTitle2": "gene:",
               "label": "TP53",
               "value": "molecularAttributes.geneIds=TP53",
-              "schemaField": "molecularAttributes.geneIds"
+              "schemaField": "geneId"
             }
           ],
           [
@@ -327,7 +301,7 @@
               "subTitle2": "gene:",
               "label": "KRAS",
               "value": "molecularAttributes.geneIds=KRAS",
-              "schemaField": "molecularAttributes.geneIds"
+              "schemaField": "geneId"
             }
           ]
         ]
