--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,5 +1,5 @@
 {
-  "API_URL": "https://beacon-apis-test.ega-archive.org/api",
-  "REDIRECT_URL": "https://beacon.ega-archive.org/",
-  "KEYCLOAK_URL": "https://beacon-network-demo2.ega-archive.org"
+  "API_URL": "ega-beacon-demo.ega-archive.org/api",
+  "REDIRECT_URL": "https://beacon-network-demo.ega-archive.org/",
+  "KEYCLOAK_URL": "https://cancer-beacon-demo.ega-archive.org/"
 }
