adding conf address

--- a/deploy/Makefile
+++ b/deploy/Makefile
@@ -1,6 +1,2 @@
 build:
-	docker stop beaconspanish
-	docker stop beacon-permissionspanish
-	docker rm beaconspanish
-	docker rm beacon-permissionspanish
-	docker-compose up -d --build beaconspanish permissionspanish
+	docker-compose up -d --build beaconspanish
